--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,29 @@
-[tool.poetry]
+[project]
 name = "truthbrush"
 version = "0.1.9"
 description = "API client for Truth Social"
-authors = ["R. Miles McCain <github@sendmiles.email>"]
-license = "Apache 2.0"
+authors = [{ name = "R. Miles McCain", email = "github@sendmiles.email" }]
+requires-python = "~=3.10"
 readme = "README.md"
+license = "Apache-2.0"
+dependencies = [
+    "click>=8.1.0,<9",
+    "loguru>=0.7.0,<0.8",
+    "python-dotenv>=1.0.1,<2",
+    "python-dateutil==2.9.0",
+    "curl_cffi>=0.7.0,<0.8",
+]
 
-[tool.poetry.scripts]
+[project.scripts]
 truthbrush = "truthbrush.cli:cli"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-click = "^8.1.0"
-loguru = "^0.7.0"
-python-dotenv = "^1.0.1"
-python-dateutil = "2.9.0"
-curl_cffi = "^0.7.0"
-
-[tool.poetry.dev-dependencies]
-black = "^24.3.0"
-pytest = "^7.0.1"
-pylint = "^2.12.2"
+[dependency-groups]
+dev = [
+    "black>=24.3.0,<25",
+    "pytest>=7.0.1,<8",
+    "pylint>=2.12.2,<3",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
